style.css
/*
Theme Name: Phoodeez
Author: Tyler Smith
Description: Phoodeez WP/Angular Integration
Version: 1.0
*/

[ng\:cloak], [ng-cloak], .ng-cloak { display: none; }

/* Sticky footer styles
-------------------------------------------------- */
html {
  position: relative;
  min-height: 100%;
}
body {
  /* Margin bottom by footer height */
  margin-bottom: 40px;
  background: 
    linear-gradient(
      rgba(211, 71, 61, 0.98), 
      rgba(211, 71, 61, 0.98)
    ),
    url('img/body_background.png') no-repeat 100% 100%;
  font-family: 'Source Sans Pro', sans-serif;
}

.footer {
  position: absolute;
  bottom: 0;
  width: 100%;
  /* Set the fixed height of the footer here */
  height: 40px;
}

.footer a, .footer a:hover{
  color: #a43a32;
  text-decoration: none;
}


/* Custom page CSS
-------------------------------------------------- */
/* Not required for template or sticky footer method. */

body > .container-fluid{
  padding: 60px 15px 0;
}

.footer > .container {
  padding-right: 15px;
  padding-left: 15px;
  color: #a43a32;
  text-align: center;
}


/*Navbar
-------------------------------------------------- */
a.phoodeez-brand{
  font-family: 'Crete Round', serif;
  font-size: 30px;
  color: #d0483e !important;
}

a.phoodeez-brand p{
  font-size: 12px;
  text-align: center;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  margin:3px 0 0 0;
}

.navbar-phoodeez{
  background-color: #ecf0f1;
}

.navbar-nav-phoodeez li a{
  padding-top: 21px;
  padding-bottom: 21px;
}

.dropdown-cart{
  background-color: #e7e7e7;
  margin-left: 40px;
  padding: 20px;
  -webkit-box-shadow: 0 6px 12px rgba(0,0,0,.175);
  box-shadow: 0 6px 12px rgba(0,0,0,.175); 
}

.empty_cart{
  text-align:center;
}

.empty_cart p{
  font-size: 20px;
}

.cartContainer{
  position: fixed;
  left: 0;
  right: 0;
  height: 0;
  margin-top: 1px;
}

.cartContainer_row{
  height: 0;
}

#cart-dropdown.active a{
  color: #d0483e !important;
}

.cart_container{
  margin-top: 10px;
  margin-bottom: 10px;
}

.cartTotal{
  padding-right: 5px;
  font-weight: bold;
  display: inline-block;
}

.navbar-nav-phoodeez li a.cart_dropdown{
  padding-top: 17px;
  padding-bottom: 17px;
}

.navbar-nav-phoodeez li a.cart_dropdown:focus{
  color:#777;
}

.custom-cart{
 font-size: 25px;  
}

.cart_item_qty{
  width:50px;
  float: left !important;
}

.cart_item_qty input{
  text-align: center;
  max-width: 40px;
  padding-left: 0;
  padding-right: 0;
  height:36px;
}

.cart_item_name{
  margin-left: 55px;
}

.cart_item_price{
  text-align: right;
}

.sub_item_name{
  font-weight: bold;
}

.dropdown-cart hr{
  border-top: 1px solid #dddddd;
}

.cart_sum .num{
  text-align: right;
}

.cart_saleTotal{
  margin-top: 20px;
}

.cart_action{
  margin-bottom: 20px;
  text-align: center;
}

.cart_action button{
  outline: none !important;
}


.cart_item_delete{
  padding: 15px;
  margin:0 15px; 
  background: #f2dede;
  text-align: center;
}

.short_notice{
  text-align: center;
  text-transform: uppercase;
  font-size: 12px;
  color: #777;
  margin-bottom: 5px;
}

/*Main Content
-------------------------------------------------- */
h1.phoodeez_funnel{
  text-align: center;
  color: #ffffff;
  font-weight: bold;
  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.4);
  margin-top: 70px;
}

h1.phoodeez_funnel a{
  text-shadow: none;
  color: #a43a32;
}

h1.phoodeez_funnel a span{
  line-height: 43px;
  vertical-align: bottom;
}

.cat_row{
  margin-top: 80px;

}

.cat_row a{
  display: block;
  color: #ffffff;
}

.cat_row a:hover{
  text-decoration: none;
}

.cat_row p{
  text-align: center;
  font-size: 18px;
  font-weight: 200;
}

.option_item{
  min-width:215px!important
}

.option-thumb{
  height: 200px;
  margin-bottom: 8px;
  padding: 20px;
  background-size:90% 90%;
  -o-background-size: 90% 90%;
  -webkit-background-size: 90% 90%;
  background-color: transparent;
  background-repeat: no-repeat;
  background-position: center;
}

.suboption-thumb{
  height: 200px;
  margin-bottom: 8px;
  padding: 20px;
  background-size:100% 100%;
  -o-background-size: 100% 100%;
  -webkit-background-size: 100% 100%;
  background-color: transparent;
  background-repeat: no-repeat;
  background-position: center;
  position: relative;
  overflow: hidden;
}

.cat_row a:hover .option-thumb, .cat_row a:focus .option-thumb{
  border-color: #a43a32 !important;
}

.package_title{
  background: rgba(0, 0, 0, .7);
  position: absolute; 
  bottom:0;
  left: 0;
  width: 100%;
  text-align:center;
  padding:20px 0;
}

.pade-loader{
  margin: auto;
  position: absolute;
  top: 0; left: 0; bottom: 0; right: 0
}


/*Phoodeez styled modal
-------------------------------------------------- */
.modal-content{
  border-radius: 0 !important;
  border-top: 3px solid #d0483e;
  box-shadow: none !important;
}

.modal-backdrop {
  bottom: 0;
}

.login-title{
  text-align: center;
}

.phoodeez-login{
  width:100%;
  outline: none !important;
  position: relative;
}

.login-loader{
  position: absolute;
  left: 20px;
  margin: auto;
  top: 0; 
  bottom: 0;
}


.login-modal-body{
  padding-left: 30px;
  padding-right: 30px;
}

.login_span_cont{
  margin: 20px 0 -10px 0;
  text-align: center;
}

.login_span{
  width: 100%;
  font-weight: bold;
  color: #fff;
  background-color: #cccccc;
  padding-right: 3px;
  padding-left: 3px;

}

.login_seperator{
  margin: 0px 0 25px 0;
}

.login_modal_error{
  width:100%;
  background-color: #f2dede;
  border:1px solid #ebccd1;
  color:#a94442;
  line-height: 1.2em;
  padding:10px;
  margin-bottom: 5px;
}

.create_name_form input{
  padding: 6px 8px;
}

.create_email_form, .create_pw2_form{
  margin-top: 20px;
}

.login_back{
  line-height:3em;
}

.packageModal .modal-content{
  background-color: #f2f5fa
}

.package-order-info{
  text-align: center;
}

.package-order-info p{
  margin-bottom: 2px;
}

.package-order-info button{
  margin: 12px 0 15px 0;
  outline: none !important;
}

.package-modal-body hr{
  margin: 10px 0;
}

.package-addtocart{
  text-align: right;
  margin-right: 10px;
}

p.packageName{
  font-size: 18px;
  font-weight: 400;
}

p.packageDesc{
  font-size: 14px;
  color: #999999;
}

.package-options-wrapper{
  margin-top: 15px; 
  position: relative;
}

.package-options-row{
  margin:0;
}

.package-options-wrapper p{
  margin-bottom: 5px;
}

.package-options-wrapper ul{
  padding-left: 0;
}

.package-options-wrapper ul li{
  list-style: none;
  background-color: #ebebeb;
  height: 65px;
  padding-top: 5px;
}

p.package-options-title{
  font-size: 16px;
  margin-bottom: 0 !important;
  font-weight: 400;
}

p.package-options-desc{
  font-size: 14px;
  color: #999999;
  margin-bottom: 0 !important;
  line-height: 1em;
}

.package-option-qty{
  position: relative;
  height: 55px;
}

.package-option-qty .form-group{
  margin-bottom: 0;
  position: absolute;
  top:10px;
  right: 10px;
}

.package-option-qty button{
  padding: 1px 4px;
  border-radius:20px;
  outline: none !important;
  margin: 0 4px;
}

.package-option-qty input{
  width:41px;
  display: inline;
  text-align: center;
}

.sideOptions h4{
  font-weight: 400;
}

.sideOptions .radio{
  margin: 0;

}

.sideOptions .radio input{
}

.sideOptions_choices{
  padding-left: 20px !important;
}

/*Single Page
-------------------------------------------------- */
.backlink{
    margin: 15px 0;
}

.backlink a{
  color: #ecf0f1
}

.package_options_wrapper, .checkout_wrapper{
  background-color: #ecf0f1;
  padding: 20px 0;
}

.single_package_container{
  height: 110px;
  overflow: hidden;
}

.package_options_header{
  height: 130px;
  padding: 0 20px;
}

.package_options_header img{
  height: auto;
  width: 130px;
  overflow: hidden;
}

.package_options_header h2{
  font-size: 20px;
  margin:0 0 10px -15px;
}

.package_options_header p{
  margin-left: -15px;
  color: #999999
  }

 .single_price{
  text-align: right;
 } 

 .single-add-icon, .single-package-info{
  display: inline-block;
 }

.package_options_list ul{
  padding: 0;
  margin-top: 10px;
}

.package_options_list ul li{
  list-style: none;
  margin: 0 20px;
  border-bottom: 1px solid #ccc
}

.package_options_list h3{
  margin: 0;
  padding: 20px;
  font-size: 16px;
  background-color: #e7e7e7;
}

.package_options_list a{
  display: block;
  color: #a43a32;
}

.package_options_list a p{
  color: #999999;
}

.package_options_list a:hover {
  text-decoration: none !important;
  color: #337ab7;
}

.single-add-icon{
  vertical-align:middle;
  margin-right: 10px;
  margin-bottom: 20px;
  width: 20px;
  height: 20px;
 }

 .package_options_list a:hover .single-add-icon{
  font-size: 20px;
 }

 /*Checkout Page
-------------------------------------------------- */
.checkout_wrapper{
  margin-top: 50px;
}



/*Responsive Layouts
-------------------------------------------------- */

/* Small Devices, Tablets */
  @media only screen and (max-width : 768px) {
      .phoodeez-brand p{
        display: none;
      }
  }

  @media(min-width:992px){

  .login .modal-dialog {
   width: 400px;
  }

  }

